jdbc fixes